fix header on mobile

--- a/src/components/HeaderComponent/Header.module.css
+++ b/src/components/HeaderComponent/Header.module.css
@@ -16,9 +16,9 @@
   width: 100%;
 }
 
-@media screen and (max-width: 925px) {
+@media screen and (max-width: 700px) {
   .kingHeader {
-    position: relative;
+    position: relative !important;
   }
 }
 
